updated quote tagging

--- a/quotebackend/pom.xml
+++ b/quotebackend/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.0.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
