--- a/quotebackend/pom.xml
+++ b/quotebackend/pom.xml
@@ -82,6 +82,12 @@
 			<artifactId>sendgrid-java</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.4.1</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
