--- a/intelliquote/package.json
+++ b/intelliquote/package.json
@@ -13,6 +13,7 @@
     "history": "^5.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^3.11.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0"
